--- a/_projects/2025-737MAX.md
+++ b/_projects/2025-737MAX.md
@@ -2,7 +2,7 @@
 layout: project
 title: 737 MAX Case Study
 description: Case Study
-image: /assets/images/4272bladedesign.jpg 
+image: /assets/images/737MAX.jpg 
 ---
 
 ### Overview
